--- a/main.scss
+++ b/main.scss
@@ -1,11 +1,93 @@
-.people {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+@use "variables.scss" as v;
+@use "reset.scss";
 
-  .person {
-    img {
-      border-radius: 200px;
-      width: 200px;
+.people {
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: repeat(2, 200px);
+    justify-content: center;
+    align-items: center;
+    gap: v.$row-gap v.$column-gap;
+
+    @media (min-width: 1000px) {
+        grid-template-columns: repeat(4, 200px);
     }
-  }
+    .person {
+        position: relative;
+        transition: all v.$transition-time ease-in-out;
+        &::before {
+            content: "";
+            position: absolute;
+            top: -10px;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: transparent;
+            z-index: -1;
+        }
+        .photo {
+            position: relative;
+            display: flex;
+            justify-content: center;
+            margin-bottom: 8px;
+            .rank {
+                width: 32px;
+                height: 32px;
+                text-align: center;
+                align-content: center;
+                font-family: Arial, Helvetica, sans-serif;
+                font-weight: 700;
+                color: #8b0000;
+                background-color: white;
+                border-radius: 200px;
+                position: absolute;
+                top: 84px;
+                right: 10px;
+            }
+        }
+        img {
+            border-radius: 200px;
+            width: 200px;
+            transition: border-radius v.$transition-time ease-in-out;
+        }
+        .details {
+            font-family: Arial, Helvetica, sans-serif;
+            color: v.$font-color;
+            font-weight: 700;
+            font-size: 20px;
+            text-align: center;
+            .extra {
+                display: none;
+                font-weight: 400;
+                font-size: 18px;
+                color: #000000;
+            }
+        }
+        &:hover {
+            transform: scale(1.2);
+            img {
+                border-radius: 60px;
+            }
+            z-index: 1;
+            .details {
+                .extra {
+                    z-index: 1;
+                    position: absolute;
+                    top: 100%;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    display: block;
+                    white-space: nowrap;
+                }
+            }
+            &:hover::before {
+                background: #eeeeee;
+                border-radius: 10px;
+                width: 220px;
+                height: 287px;
+                left: 50%;
+                transform: translateX(-50%);
+            }
+        }
+    }
 }
