--- a/main.scss
+++ b/main.scss
@@ -12,91 +12,98 @@
     @media (min-width: 1000px) {
         grid-template-columns: repeat(4, 200px);
     }
-    .person {
+}
+
+.person {
+    position: relative;
+    transition: all v.$transition-time ease-in-out;
+    &::before {
+        content: "";
+        position: absolute;
+        top: -10px;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: transparent;
+        z-index: -1;
+    }
+    &__photo {
         position: relative;
-        transition: all v.$transition-time ease-in-out;
-        &::before {
-            content: "";
-            position: absolute;
-            top: -10px;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: transparent;
-            z-index: -1;
-        }
-        &__photo {
-            position: relative;
-            display: flex;
-            justify-content: center;
-            margin-bottom: 8px;
-            &__rank {
-                width: 32px;
-                height: 32px;
-                text-align: center;
-                align-content: center;
-                font-family: Arial, Helvetica, sans-serif;
-                font-weight: 700;
-                color: #8b0000;
-                background-color: white;
-                border-radius: 200px;
-                position: absolute;
-                top: 84px;
-                right: 10px;
-            }
-        }
+        display: flex;
+        justify-content: center;
+        margin-bottom: 8px;
+    }
+
+    img {
+        border-radius: 200px;
+        width: 200px;
+        transition: border-radius v.$transition-time ease-in-out;
+    }
+
+    &__details {
+        font-family: Arial, Helvetica, sans-serif;
+        color: v.$font-color;
+        font-weight: 700;
+        font-size: 20px;
+        text-align: center;
+    }
+
+    &__rank {
+        width: 32px;
+        height: 32px;
+        text-align: center;
+        align-content: center;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: 700;
+        color: #8b0000;
+        background-color: white;
+        border-radius: 200px;
+        position: absolute;
+        top: 84px;
+        right: 10px;
+    }
+
+    &__extra {
+        display: none;
+        font-weight: 400;
+        font-size: 18px;
+        color: #000000;
+    }
+
+    &__sport::after {
+        content: ",";
+    }
+
+    &__pay::before {
+        content: "$";
+    }
+
+    &__pay::after {
+        content: "M";
+    }
+
+    &:hover {
+        transform: scale(1.2);
         img {
-            border-radius: 200px;
-            width: 200px;
-            transition: border-radius v.$transition-time ease-in-out;
+            border-radius: 60px;
         }
-        .details {
-            font-family: Arial, Helvetica, sans-serif;
-            color: v.$font-color;
-            font-weight: 700;
-            font-size: 20px;
-            text-align: center;
-            &__extra {
-                display: none;
-                font-weight: 400;
-                font-size: 18px;
-                color: #000000;
-                &__sport::after {
-                    content: ",";
-                }
-                &__pay::before {
-                    content: "$";
-                }
-                &__pay::after {
-                    content: "M";
-                }
-            }
-        }
-        &:hover {
-            transform: scale(1.2);
-            img {
-                border-radius: 60px;
-            }
+        z-index: 1;
+        .person__extra {
             z-index: 1;
-            .details {
-                &__extra {
-                    z-index: 1;
-                    position: absolute;
-                    top: 100%;
-                    left: 50%;
-                    transform: translateX(-50%);
-                    display: block;
-                    white-space: nowrap;
-                }
-            }
-            &:hover::before {
-                background: #eeeeee;
-                border-radius: 10px;
-                width: 220px;
-                height: 287px;
-                left: 50%;
-                transform: translateX(-50%);
-            }
+            position: absolute;
+            top: 100%;
+            left: 50%;
+            transform: translateX(-50%);
+            display: block;
+            white-space: nowrap;
+        }
+        &:hover::before {
+            background: #eeeeee;
+            border-radius: 10px;
+            width: 220px;
+            height: 287px;
+            left: 50%;
+            transform: translateX(-50%);
         }
     }
 }
